deployments/kustomize/bookinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    mesh: bookinfo-mesh
    gateway: ingress-gw
    appmesh.k8s.aws/sidecarInjectorWebhook: enabled
