deployments/kustomize/bookinfo/canary.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: reviews-v3
  labels:
    app: reviews
    service: reviews
spec:
  ports:
    - port: 9080
  selector:
    app: reviews
    version: v3
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      labels:
        app: reviews
        version: v3
    spec:
      serviceAccountName: bookinfo-pod
      containers:
        - name: reviews
          image: 785548451685.dkr.ecr.ap-south-1.amazonaws.com/homelabs:istio-bookinfo-reviews-v3-1.16.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9080
          resources:
            limits:
              cpu: 200m
              memory: 300Mi
            requests:
              cpu: 100m
              memory: 200Mi
