deployments/kustomize/bookinfo/database.yaml
##################################################################################################
# mysql
##################################################################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  labels:
    app: mysql
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      name: mysql
      labels:
        app: mysql
    spec:
      serviceAccountName: bookinfo-pod
      containers:
        - name: mysql
          image: 785548451685.dkr.ecr.ap-south-1.amazonaws.com/homelabs:istio-bookinfo-mysql-5.7
          ports:
            - containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  labels:
    app: mysql
    service: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
---
