deployments/kustomize/bookinfo/meshed_app.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: details-vs
spec:
  awsName: details.bookinfo.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: details-vn
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: ratings-vs
spec:
  awsName: ratings.bookinfo.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: ratings-vn
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: reviews-vs
spec:
  awsName: reviews.bookinfo.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: reviews-v1-vn
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: productpage-vs
spec:
  awsName: productpage.bookinfo.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: productpage-vr
