deployments/kustomize/bookinfo/meshed_database.yaml
---
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: mysql-vs
spec:
  awsName: mysql.bookinfo.svc.cluster.local
  provider:
    virtualNode:
      virtualNodeRef:
        name: mysql-vn
---
